--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Hello React!</title>
+        <title>TS-React</title>
+        <link rel="icon" href="./assets/img/react-logo.svg">
     </head>
     <body>
         <div id="root"></div>
